Sat Feb 25 07:53:40 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_initialize): keep path in original encoding.

	* error.c (syserr_initialize): prefer the encoding of message over
	  locale.  [ruby-dev:45279][Bug #6071]

Sat Feb 25 06:55:29 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (utime_internal): fix a variable missed to replace.
	  [ruby-core:42864] [Bug #6077]

Fri Feb 24 18:21:55 2012  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/zlib/test_zlib.rb (TestZlibGzipReader#test_encoding): Add
	  encoding testcases for GzipReader#read.  read() emits
	  Encoding.default_external in contrast to read(size) emits BINARY.
	  See also: http://bugs.jruby.org/6208

Fri Feb 24 17:56:39 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/ruby/test_literal.rb (TestRubyLiteral#test_special_const):
	  test for https://bugs.php.net/bug.php?id=61095

Fri Feb 24 16:48:29 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c, file.c, io.c (rb_sys_fail_path): use rb_sys_fail_str.

	* error.c: new functions to deal exceptions with string instances.

	* dir.c, file.c, io.c: use rb_sys_fail_path.

Fri Feb 24 15:49:07 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (__builtin_unreachable): check for clang.
	  [ruby-core:42849]

	* include/ruby/ruby.h (UNREACHABLE): fallback definition.

Fri Feb 24 13:54:33 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c: prevent a memory leak by protecting calls to
	  handler callbacks.
	* test/psych/test_parser.rb: test to demonstrate leak.

Fri Feb 24 12:07:34 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/net/http.rb: Fix documentation. Patched from Florian Mhun
	  via http://github.com/ruby/ruby/pull/96

Fri Feb 24 11:48:07 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* string.c (rb_str_prepend): Fix documentation for String#prepend.
	  Patched from Franck Verrot via http://github.com/ruby/ruby/pull/98
	  and Andrew Horsman via http://github.com/ruby/ruby/pull/55
