@@ -1,3 +1,8 @@
+Sat Feb 25 07:53:49 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (dir_inspect), io.c (rb_io_inspect): keep encoding of path.
+	  [Bug #6072]
+
 Sat Feb 25 07:53:40 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dir.c (dir_initialize): keep path in original encoding.
